--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -146,9 +146,12 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView_details"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginStart="40dp"
             android:padding="10dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="0dp"
