--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="70dp"
         android:backgroundTint="@color/themeColor"
         android:elevation="8dp"
         android:focusable="true"
@@ -39,7 +39,6 @@
         android:id="@+id/partsFilter"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/filter_background"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/partsCardSearch"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +55,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
         app:cardCornerRadius="26dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/partsFilter">
@@ -66,230 +65,250 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/partsFilterText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsFilterText"
-                android:text="@string/filter"
-                android:textSize="35sp"
-                android:textColor="@color/primaryTextColor"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="10dp"
+                android:text="@string/filter"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="35sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/partsClearAll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsClearAll"
-                android:text="@string/clear_all"
-                android:textSize="15sp"
-                android:textColor="@color/primaryTextColor"
                 android:layout_marginTop="38dp"
                 android:layout_marginEnd="@dimen/loginViewsMargin"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:text="@string/clear_all"
+                android:textColor="@color/primaryTextColor"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/partsMakeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsMakeText"
-                android:text="@string/make"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/make"
+                android:textColor="@color/darkTextColor"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsFilterText" />
 
             <Spinner
+                android:id="@+id/partsMakeSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsMakeSpinner"
-                android:layout_marginTop="25dp"
                 android:layout_marginStart="170dp"
+                android:layout_marginTop="25dp"
+                android:textAlignment="textStart"
                 android:backgroundTint="@color/themeColor"
-                app:layout_constraintStart_toStartOf="parent"
+                android:entries="@array/spinner"
                 app:layout_constraintBottom_toTopOf="@id/partsModelSpinner"
-                app:layout_constraintTop_toBottomOf="@id/partsClearAll"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:entries="@array/spinner"/>
+                app:layout_constraintStart_toEndOf="@id/partsMakeText"
+                app:layout_constraintTop_toBottomOf="@id/partsClearAll" />
 
             <TextView
+                android:id="@+id/partsModelText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsModelText"
-                android:text="@string/model"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/model"
+                android:textColor="@color/darkTextColor"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsMakeText" />
 
             <Spinner
+                android:id="@+id/partsModelSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsModelSpinner"
-                android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
+                android:layout_marginTop="25dp"
+                android:textAlignment="textStart"
                 android:backgroundTint="@color/themeColor"
-                app:layout_constraintStart_toStartOf="parent"
+                android:entries="@array/spinner"
                 app:layout_constraintBottom_toTopOf="@id/partsYearSpinner"
-                app:layout_constraintTop_toBottomOf="@id/partsMakeSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:entries="@array/spinner"/>
+                app:layout_constraintStart_toEndOf="@id/partsModelText"
+                app:layout_constraintTop_toBottomOf="@id/partsMakeSpinner" />
 
             <TextView
+                android:id="@+id/partsYearText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsYearText"
-                android:text="@string/year"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/year"
+                android:textColor="@color/darkTextColor"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsModelText" />
 
             <Spinner
+                android:id="@+id/partsYearSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsYearSpinner"
-                android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
+                android:layout_marginTop="25dp"
+                android:textAlignment="textStart"
                 android:backgroundTint="@color/themeColor"
-                app:layout_constraintStart_toStartOf="parent"
+                android:entries="@array/spinner"
                 app:layout_constraintBottom_toTopOf="@id/partsCategorySpinner"
-                app:layout_constraintTop_toBottomOf="@id/partsModelSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:entries="@array/spinner"/>
+                app:layout_constraintStart_toEndOf="@id/partsYearText"
+                app:layout_constraintTop_toBottomOf="@id/partsModelSpinner" />
 
             <TextView
+                android:id="@+id/partsCategoryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsCategoryText"
-                android:text="@string/category"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/category"
+                android:textColor="@color/darkTextColor"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsYearText" />
 
             <Spinner
+                android:id="@+id/partsCategorySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsCategorySpinner"
-                android:layout_marginTop="23dp"
                 android:layout_marginStart="170dp"
+                android:layout_marginTop="25dp"
+                android:textAlignment="textStart"
                 android:backgroundTint="@color/themeColor"
-                app:layout_constraintStart_toStartOf="parent"
+                android:entries="@array/spinner"
                 app:layout_constraintBottom_toTopOf="@id/partsSubCategorySpinner"
-                app:layout_constraintTop_toBottomOf="@id/partsYearSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:entries="@array/spinner"/>
+                app:layout_constraintStart_toEndOf="@id/partsCategoryText"
+                app:layout_constraintTop_toBottomOf="@id/partsYearSpinner" />
 
             <TextView
+                android:id="@+id/partsSubCategoryText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsSubCategoryText"
-                android:text="@string/subcategory"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/subcategory"
+                android:textColor="@color/darkTextColor"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsCategoryText" />
 
             <Spinner
+                android:id="@+id/partsSubCategorySpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsSubCategorySpinner"
-                android:layout_marginTop="24dp"
                 android:layout_marginStart="170dp"
+                android:layout_marginTop="25dp"
+                android:textAlignment="textStart"
                 android:backgroundTint="@color/themeColor"
-                app:layout_constraintStart_toStartOf="parent"
+                android:entries="@array/spinner"
                 app:layout_constraintBottom_toTopOf="@id/partsConditionSpinner"
-                app:layout_constraintTop_toBottomOf="@id/partsCategorySpinner"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:entries="@array/spinner"/>
+                app:layout_constraintStart_toEndOf="@id/partsSubCategoryText"
+                app:layout_constraintTop_toBottomOf="@id/partsCategorySpinner" />
 
             <TextView
+                android:id="@+id/partsConditionText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsConditionText"
-                android:text="@string/condition"
-                android:textSize="20sp"
-                android:textColor="@color/darkTextColor"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/condition"
+                android:textColor="@color/darkTextColor"
+                android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsSubCategoryText" />
 
             <Spinner
                 android:id="@+id/partsConditionSpinner"
-                android:backgroundTint="@color/themeColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="170dp"
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="21dp"
+                android:textAlignment="textStart"
+                android:backgroundTint="@color/themeColor"
                 android:entries="@array/spinner"
                 app:layout_constraintBottom_toTopOf="@+id/partsNegotiable"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@id/partsConditionText"
                 app:layout_constraintTop_toBottomOf="@id/partsSubCategorySpinner" />
 
             <CheckBox
                 android:id="@+id/partsNegotiable"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:text="@string/negotiable"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsConditionText" />
 
+            <CheckBox
+                android:id="@+id/partsLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/loginViewsMargin"
+                android:text="@string/nearest_location"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/partsNegotiable"
+                app:layout_constraintTop_toBottomOf="@id/partsConditionText" />
+
             <TextView
+                android:id="@+id/partsPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsPrice"
-                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginEnd="@dimen/loginViewsMargin"
                 android:text="@string/price"
                 android:textColor="@color/darkTextColor"
                 android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/partsNegotiable"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/partsNegotiable" />
 
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/linearPrice"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/partsPrice"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+            <EditText
                 android:id="@+id/partsPriceFromEditText"
-                android:layout_marginEnd="200dp"
-                android:layout_marginStart="@dimen/loginViewsMargin"
                 style="@style/modifiedEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/loginViewsMargin"
                 android:hint="@string/from"
                 android:inputType="number"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/partsPrice"
-                app:layout_constraintEnd_toEndOf="parent" />
+                android:layout_weight="1"/>
 
             <EditText
+                android:id="@+id/partsPriceToEditText"
+                style="@style/modifiedEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/partsPriceToEditText"
-                android:layout_marginStart="200dp"
                 android:layout_marginEnd="@dimen/loginViewsMargin"
-                style="@style/modifiedEditText"
                 android:hint="@string/to"
-                app:layout_constraintStart_toEndOf="@id/partsPriceFromEditText"
-                app:layout_constraintTop_toBottomOf="@id/partsPrice"
-                app:layout_constraintEnd_toEndOf="parent" />
+                android:layout_weight="1"/>
+            </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/partsFilterSubmit"
@@ -298,10 +317,10 @@
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginBottom="@dimen/loginViewsMargin"
                 android:text="@string/submit"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/partsPriceToEditText"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/linearPrice" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
