--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -80,11 +80,12 @@
                 android:id="@+id/partsClearAll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="38dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginEnd="@dimen/loginViewsMargin"
                 android:text="@string/clear_all"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="15sp"
+                app:layout_constraintBottom_toTopOf="@id/partsMakeSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -97,6 +98,7 @@
                 android:text="@string/make"
                 android:textColor="@color/darkTextColor"
                 android:textSize="20sp"
+
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/partsFilterText" />
 
@@ -296,6 +298,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/loginViewsMargin"
+                android:layout_marginEnd="10dp"
                 android:hint="@string/from"
                 android:inputType="number"
                 android:layout_weight="1"/>
@@ -306,7 +309,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/loginViewsMargin"
+                android:layout_marginStart="10dp"
                 android:hint="@string/to"
+                android:inputType="number"
                 android:layout_weight="1"/>
             </LinearLayout>
 
