--- a/app/src/main/res/layout/fragment_scrap_yard.xml
+++ b/app/src/main/res/layout/fragment_scrap_yard.xml
@@ -37,52 +37,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrapYardFilter"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/scrapYardCardSearch"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/scrapYardListView"
         android:src="@drawable/ic_filter" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/scrapYardCardFilter"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
-        android:elevation="12dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        app:cardCornerRadius="26dp"
+        android:id="@+id/scrapYardFilterText"
+        android:text="@string/filtered_by_nearest_location_n"
+        android:textStyle="bold"
+        android:textColor="@color/darkTextColor"
+        android:layout_marginTop="@dimen/loginViewsMargin"
+        android:layout_marginStart="@dimen/loginViewsMargin"
+        android:layout_marginEnd="@dimen/loginViewsMargin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scrapYardFilter">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/partsFilterText"
-                android:text="@string/filter"
-                android:textSize="30sp"
-                android:textColor="@color/primaryTextColor"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="@dimen/loginViewsMargin"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintBottom_toTopOf="@id/scrapYardListView"
+        app:layout_constraintTop_toBottomOf="@id/scrapYardCardSearch"
+        android:visibility="gone"/>
 
     <ListView
         android:id="@+id/scrapYardListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/scrapYardCardSearch" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scrapYardFilterText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
