--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -12,6 +12,8 @@
     android:padding="20dp">
 
     <TextView
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         style="@style/viewParent.headerText.NoMode"
         android:text="@string/enter_the_your_email_to_reset_your_password" />
 
@@ -19,6 +21,8 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputEmailForPassReset"
         style="@style/parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="@dimen/loginViewsMargin">
 
         <EditText
