--- a/app/src/main/res/drawable/button_background_black.xml
+++ b/app/src/main/res/drawable/button_background_black.xml
@@ -7,7 +7,7 @@
         android:color="@color/colorPrimaryDark"/>
 
     <padding
-        android:left="10dp"
+        android:start="10dp"
         android:top="0dp"
         android:right="0dp"
         android:bottom="0dp" />
