--- a/app/src/main/res/drawable/button_background_blue.xml
+++ b/app/src/main/res/drawable/button_background_blue.xml
@@ -8,7 +8,7 @@
     <!--        android:color="#00ADC1"/> -->
 
     <padding
-        android:left="10dp"
+        android:start="10dp"
         android:top="0dp"
         android:right="0dp"
         android:bottom="0dp" />
