--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,18 +29,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp">
+                android:layout_marginEnd="0dp">
 
                 <TextView
                     style="@style/viewParent.headerText.NoMode"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginEnd="0dp"
+                    android:layout_toStartOf="@+id/lotti"
                     android:text="@string/already_nhave_an_naccount" />
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/lotti"
-                    android:layout_width="206dp"
-                    android:layout_height="198dp"
+                    android:layout_width="195dp"
+                    android:layout_height="195dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
