--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,8 +29,9 @@
 
                 <TextView
                     style="@style/viewParent.headerText.NoMode"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginStart="5dp"
                     android:text="@string/here_s_nyour_first_nstep_with_nus"
                     android:textColor="@color/whiteTextColor" />
 
@@ -39,7 +40,7 @@
                     android:layout_width="206dp"
                     android:layout_height="198dp"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerInParent="true"
                     app:lottie_autoPlay="true"
                     app:lottie_loop="true"
@@ -148,6 +149,7 @@
                         android:id="@+id/locationButton"
                         style="@style/locationButton"
                         android:layout_marginTop="@dimen/loginViewsMargin"
+                        android:paddingStart="@dimen/loginViewsMargin"
                         android:drawableStart="@drawable/location_icon"
                         android:layout_marginStart="20dp"
                         android:layout_marginEnd="20dp"
@@ -158,7 +160,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/locationText" />
+                        android:id="@+id/locationText"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"/>
 
                     <androidx.appcompat.widget.AppCompatSpinner
                         android:id="@+id/spinnerAccountType"
@@ -179,6 +183,8 @@
                         style="@style/parent"
                         android:layout_marginTop="@dimen/loginViewsMargin"
                         android:layout_marginBottom="@dimen/loginViewsMargin"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
                         android:onClick="onLoginClick"
                         android:text="@string/already_have_an_account"
                         android:textAlignment="center"
