--- a/app/src/main/res/layout/fragment_parts.xml
+++ b/app/src/main/res/layout/fragment_parts.xml
@@ -39,6 +39,7 @@
         android:id="@+id/partsFilter"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/partsCardSearch"
         app:layout_constraintEnd_toEndOf="parent"
