--- a/app/src/main/res/layout/activity_part_details.xml
+++ b/app/src/main/res/layout/activity_part_details.xml
@@ -50,9 +50,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/part_details_title" />
 
-        <HorizontalScrollView
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/horizontalScrollView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
@@ -62,63 +62,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/name_part">
 
-            <LinearLayout
-                android:id="@+id/imageContainer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
 
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewtest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="8dp">
-
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:layout_width="300dp"
-                        android:layout_height="300dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/test" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewtest1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="8dp">
-
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:layout_width="300dp"
-                        android:layout_height="300dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/test" />
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cardViewtest2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    app:cardCornerRadius="20dp"
-                    app:cardElevation="8dp">
-
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:layout_width="300dp"
-                        android:layout_height="300dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/test" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-        </HorizontalScrollView>
+        </androidx.viewpager.widget.ViewPager>
 
         <TextView
             android:id="@+id/pricetxt"
@@ -451,7 +396,7 @@
                 android:layout_height="match_parent" />
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/location_part_click"
-                android:layout_gravity="bottom|end"
+                android:layout_gravity="bottom|left"
                 android:src="@drawable/expand_icon"
                 android:layout_margin="10dp"
                 android:layout_width="30dp"
